--- a/Catalog.csproj
+++ b/Catalog.csproj
@@ -1,8 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
+
+
 
   <ItemGroup>
     <None Remove="Swashbuckle.AspNetCore" />
